[package]
name = "ultra-low-latency-eth-node"
version = "0.1.0"
edition = "2021"
authors = ["Michael Ajilore"]
description = "Ultra low-latency Ethereum node price feed with shared memory"
license = "MIT"

# Performance-critical build settings
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
overflow-checks = false
panic = "abort"



[dependencies]
ethers = { version = "2.0", features = ["ws", "rustls"] }
tokio = { version = "1.0", features = ["full", "rt"] }
futures-util = "0.3"
core_affinity = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
mimalloc = { version = "0.1", default-features = false }
#pprof = { version = "0.12", features = ["criterion", "flamegraph"] }
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.7"
ahash = "0.8"
smallvec = "1.11"
arrayvec = "0.7"
tinyvec = "1.6"
memmap2 = "0.9"
page_size = "0.6"
libc = "0.2"
nix = "0.27"
hwloc = "0.5"
rmp-serde = "1.1"
bincode = "1.3"
postcard = "1.0"
quanta = "0.12"
coarsetime = "0.1"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = true
lto = true
codegen-units = 1

[profile.max-perf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[workspace]
members = ["."]

[[bin]]
name = "ultra-low-latency-eth-node"
path = "src/main.rs"

[[example]]
name = "price_reader"
path = "examples/price_reader.rs"

[[example]]
name = "daemon_monitor"
path = "examples/daemon_monitor.rs"


[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.68"
pkg-config = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
proptest = "1.4"
quickcheck = "1.0"
pretty_assertions = "1.4"
serial_test = "3.0"

flamegraph = "0.6"
perf-event = "0.4"
cpuprofiler = "0.0.4"
[target.'cfg(unix)'.dependencies]
pprof = { version = "0.12", features = ["criterion", "flamegraph"] }